fix: releases overlapping footer
Fixed overlap of latest releases with footer in home.html.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -360,7 +360,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 	width: 400px;
 }
 
-#footer {
+.footer {
 	clear:both;
 	position: absolute;
 	bottom: 0;
